# data-structures

./: README.md  pyproject.toml
data_structures/lists/: DLList.py  DLNode.py  IList.py  SLList.py  SLNode.py  __init__.py
tests/lists/: test_dl_list.py  test_sl_list.py
